// Vitest Snapshot v1

exports[`install compliant NPM tag packages > it should install tagged version if cli is tagged with beta 1`] = `
[
  [
    "
=========================
WDIO Configuration Helper
=========================
",
  ],
  [
    "
Installing wdio packages:
-",
    "@wdio/local-runner
- @wdio/mocha-framework
- @wdio/crossbrowsertesting-service
- wdio-lambdatest-service
- ts-node
- typescript",
  ],
  [
    "
Packages installed successfully, creating configuration file...",
  ],
  [
    "To have TypeScript support please add the following packages to your \\"types\\" list:
{
  \\"compilerOptions\\": {
    \\"types\\": [\\"node\\", \\"webdriverio/async\\", \\"@wdio/mocha-framework\\", \\"expect-webdriverio\\", \\"@wdio/crossbrowsertesting-service\\"]
  }
}

For for information on TypeScript integration check out: https://webdriver.io/docs/typescript
",
  ],
  [
    "
Configuration file was created successfully!
To run your tests, execute:
$ npx wdio run test/wdio.conf.ts
",
  ],
]
`;

exports[`install compliant NPM tag packages > it should install tagged version if cli is tagged with latest 1`] = `
[
  [
    "
=========================
WDIO Configuration Helper
=========================
",
  ],
  [
    "
Installing wdio packages:
-",
    "@wdio/local-runner
- @wdio/mocha-framework
- @wdio/crossbrowsertesting-service
- wdio-lambdatest-service
- ts-node
- typescript",
  ],
  [
    "
Packages installed successfully, creating configuration file...",
  ],
  [
    "To have TypeScript support please add the following packages to your \\"types\\" list:
{
  \\"compilerOptions\\": {
    \\"types\\": [\\"node\\", \\"webdriverio/async\\", \\"@wdio/mocha-framework\\", \\"expect-webdriverio\\", \\"@wdio/crossbrowsertesting-service\\"]
  }
}

For for information on TypeScript integration check out: https://webdriver.io/docs/typescript
",
  ],
  [
    "
Configuration file was created successfully!
To run your tests, execute:
$ npx wdio run test/wdio.conf.ts
",
  ],
]
`;

exports[`install compliant NPM tag packages > it should install tagged version if cli is tagged with next 1`] = `
[
  [
    "
=========================
WDIO Configuration Helper
=========================
",
  ],
  [
    "
Installing wdio packages:
-",
    "@wdio/local-runner
- @wdio/mocha-framework
- @wdio/crossbrowsertesting-service
- wdio-lambdatest-service
- ts-node
- typescript",
  ],
  [
    "
Packages installed successfully, creating configuration file...",
  ],
  [
    "To have TypeScript support please add the following packages to your \\"types\\" list:
{
  \\"compilerOptions\\": {
    \\"types\\": [\\"node\\", \\"webdriverio/async\\", \\"@wdio/mocha-framework\\", \\"expect-webdriverio\\", \\"@wdio/crossbrowsertesting-service\\"]
  }
}

For for information on TypeScript integration check out: https://webdriver.io/docs/typescript
",
  ],
  [
    "
Configuration file was created successfully!
To run your tests, execute:
$ npx wdio run test/wdio.conf.ts
",
  ],
]
`;

exports[`install compliant NPM tag packages > it should not install tagged version if cli is tagged with a specific version 1`] = `
[
  [
    "
=========================
WDIO Configuration Helper
=========================
",
  ],
  [
    "
Installing wdio packages:
-",
    "@wdio/local-runner
- @wdio/mocha-framework
- @wdio/crossbrowsertesting-service
- wdio-lambdatest-service
- ts-node
- typescript",
  ],
  [
    "
Packages installed successfully, creating configuration file...",
  ],
  [
    "To have TypeScript support please add the following packages to your \\"types\\" list:
{
  \\"compilerOptions\\": {
    \\"types\\": [\\"node\\", \\"webdriverio/async\\", \\"@wdio/mocha-framework\\", \\"expect-webdriverio\\", \\"@wdio/crossbrowsertesting-service\\"]
  }
}

For for information on TypeScript integration check out: https://webdriver.io/docs/typescript
",
  ],
  [
    "
Configuration file was created successfully!
To run your tests, execute:
$ npx wdio run test/wdio.conf.ts
",
  ],
]
`;

exports[`prints TypeScript setup message 1`] = `
[
  [
    "
=========================
WDIO Configuration Helper
=========================
",
  ],
  [
    "
Installing wdio packages:
-",
    "@wdio/local-runner
- @wdio/mocha-framework
- @wdio/crossbrowsertesting-service
- wdio-lambdatest-service
- ts-node
- typescript",
  ],
  [
    "
Packages installed successfully, creating configuration file...",
  ],
  [
    "To have TypeScript support please add the following packages to your \\"types\\" list:
{
  \\"compilerOptions\\": {
    \\"types\\": [\\"node\\", \\"webdriverio/async\\", \\"@wdio/mocha-framework\\", \\"expect-webdriverio\\", \\"@wdio/crossbrowsertesting-service\\"]
  }
}

For for information on TypeScript integration check out: https://webdriver.io/docs/typescript
",
  ],
  [
    "
Configuration file was created successfully!
To run your tests, execute:
$ npx wdio run test/wdio.conf.ts
",
  ],
]
`;

exports[`prints TypeScript setup message with ts-node installed 1`] = `
[
  [
    "
=========================
WDIO Configuration Helper
=========================
",
  ],
  [
    "
Installing wdio packages:
-",
    "@wdio/local-runner
- @wdio/mocha-framework
- @wdio/crossbrowsertesting-service
- wdio-lambdatest-service
- ts-node
- typescript",
  ],
  [
    "
Packages installed successfully, creating configuration file...",
  ],
  [
    "To have TypeScript support please add the following packages to your \\"types\\" list:
{
  \\"compilerOptions\\": {
    \\"types\\": [\\"node\\", \\"webdriverio/async\\", \\"@wdio/mocha-framework\\", \\"expect-webdriverio\\", \\"@wdio/crossbrowsertesting-service\\"]
  }
}

For for information on TypeScript integration check out: https://webdriver.io/docs/typescript
",
  ],
  [
    "
Configuration file was created successfully!
To run your tests, execute:
$ npx wdio run test/wdio.conf.ts
",
  ],
]
`;

exports[`should create config file 1`] = `
{
  "installedPackages": [
    "@wdio/local-runner",
    "@wdio/mocha-framework",
    "@wdio/spec-reporter",
    "wdio-wait-for",
    "@wdio/sauce-service",
  ],
  "parsedAnswers": {
    "_async": "async ",
    "_await": "await ",
    "framework": "mocha",
    "isSync": false,
    "isUsingBabel": false,
    "isUsingTypeScript": false,
    "npmInstall": true,
    "packagesToInstall": [
      "@wdio/local-runner",
      "@wdio/mocha-framework",
      "@wdio/spec-reporter",
      "wdio-wait-for",
      "@wdio/sauce-service",
    ],
    "plugins": [
      "wait-for",
    ],
    "relativePath": "",
    "reporters": [
      "spec",
    ],
    "runner": "local",
    "services": [
      "sauce",
    ],
    "tsConfigFilePath": "test/tsconfig.json",
  },
  "success": true,
}
`;

exports[`should not install @babel/register if existing 1`] = `
[
  [
    "
=========================
WDIO Configuration Helper
=========================
",
  ],
  [
    "
Installing wdio packages:
-",
    "@wdio/local-runner
- @wdio/mocha-framework
- @wdio/crossbrowsertesting-service
- wdio-lambdatest-service
- @babel/register
- @babel/core
- @babel/preset-env",
  ],
  [
    "
Packages installed successfully, creating configuration file...",
  ],
  [
    "
Configuration file was created successfully!
To run your tests, execute:
$ npx wdio run wdio.conf.js
",
  ],
]
`;

exports[`should not install npm packages when npmInstall is false 1`] = `[Function]`;

exports[`should setup Babel if not existing 1`] = `
[
  [
    "
=========================
WDIO Configuration Helper
=========================
",
  ],
  [
    "
Installing wdio packages:
-",
    "@wdio/local-runner
- @wdio/mocha-framework
- @wdio/crossbrowsertesting-service
- wdio-lambdatest-service
- @babel/register
- @babel/core
- @babel/preset-env",
  ],
  [
    "
Packages installed successfully, creating configuration file...",
  ],
  [
    "
Configuration file was created successfully!
To run your tests, execute:
$ npx wdio run wdio.conf.js
",
  ],
]
`;
